Update 'go-qeauuijg' component image to: quay.io/rhtap_qe/go-qeauuijg:9eec48408244e169d22a6780273c5f1b528185d4@sha256:7310f68e16758e178673ea4eed254071f7c69eaef7fc2d58783fa1517705ba43

--- a/components/go-qeauuijg/overlays/development/deployment-patch.yaml
+++ b/components/go-qeauuijg/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-qeauuijg
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-qeauuijg:9eec48408244e169d22a6780273c5f1b528185d4@sha256:7310f68e16758e178673ea4eed254071f7c69eaef7fc2d58783fa1517705ba43
+          name: container-image
